--- a/index.html
+++ b/index.html
@@ -150,25 +150,16 @@
     </div>
   </div>
 
-  <script src="js/bind_polyfill.js"></script>
-  <script src="js/classlist_polyfill.js"></script>
-  <script src="js/animframe_polyfill.js"></script>
-  <script src="js/keyboard_input_manager.js"></script>
-  <script src="js/html_actuator.js"></script>
-  <script src="js/grid.js"></script>
-  <script src="js/tile.js"></script>
-  <script src="js/local_storage_manager.js"></script>
-  <script src="js/game_manager.js"></script>
-  <script src="js/application.js"></script>
-
-  <script>
-    (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,"script","//www.google-analytics.com/analytics.js","ga");
-
-    ga("create", "UA-42620757-2", "gabrielecirulli.github.io");
-    ga("send", "pageview");
-  </script>
+  <script src="js/bind_polyfill.js" data-cover></script>
+  <script src="js/classlist_polyfill.js" data-cover></script>
+  <script src="js/animframe_polyfill.js" data-cover></script>
+  <script src="js/keyboard_input_manager.js" data-cover></script>
+  <script src="js/html_actuator.js" data-cover></script>
+  <script src="js/grid.js" data-cover></script>
+  <script src="js/tile.js" data-cover></script>
+  <script src="js/local_storage_manager.js" data-cover></script>
+  <script src="js/game_manager.js" data-cover></script>
+  <script src="js/application.js" data-cover></script>
+  <script src="js/blanket.min.js" data-cover-flags="debug" data-cover-adapter="js/usage-blanket.js"></script>
 </body>
 </html>
